<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="612dp"
    android:layout_height="373dp"
    android:background="@drawable/bg_dialog_single">

  <TextView
      android:id="@+id/filtererror_filter_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="35dp"
      android:text="@string/input_pwd"
      android:textColor="@color/color_white"
      android:textSize="35dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/pwd_et"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_marginLeft="40dp"
      android:layout_marginTop="10dp"
      android:layout_marginRight="40dp"
      android:background="@drawable/shape_input_et"
      android:hint="@string/input_pwd_hint"
      android:inputType="textPassword"
      android:textColor="@color/color_white"
      android:textColorHint="@color/color_99"
      android:textSize="30dp"
      app:layout_constraintTop_toBottomOf="@id/filtererror_filter_type" />

  <TextView
      android:id="@+id/wifi_tips"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="--"
      android:textColor="@color/color_99"
      android:textSize="28dp"
      app:layout_constraintStart_toStartOf="@id/pwd_et"
      app:layout_constraintTop_toBottomOf="@id/pwd_et" />

  <Button
      android:id="@+id/cancel_btn"
      android:layout_width="256dp"
      android:layout_height="79dp"
      android:layout_marginBottom="35dp"
      android:background="@drawable/bg_btn_stroke"
      android:text="@string/cancel"
      android:textColor="@color/text_color"
      android:textSize="28dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="@id/pwd_et" />

  <Button
      android:id="@+id/sure_btn"
      android:layout_width="256dp"
      android:layout_height="79dp"
      android:layout_marginBottom="35dp"
      android:background="@drawable/bg_wifi_finish_disable"
      android:text="@string/sure"
      android:enabled="false"
      android:textColor="@color/color_white"
      android:textSize="28dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@id/pwd_et" />

</androidx.constraintlayout.widget.ConstraintLayout>