<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <com.viomi.ovensocommon.view.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:set_title_text="@string/wateraging_disinfect_title"
            app:set_title_text_size="34dp" />


        <TextView
            android:id="@+id/wateraging_disinfect_tip"
            style="@style/factorytest_text_style"
            android:layout_marginTop="300dp"
            android:text="@string/wateraging_disinfecting"
            android:textSize="60dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/wateraging_factory"
            style="@style/factorytest_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="150dp"
            android:text="@string/wateraging_factory_start"
            android:textSize="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wateraging_disinfect_tip" />

        <Button
            android:id="@+id/wateraging_disinfect"
            style="@style/factorytest_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="150dp"
            android:text="@string/wateraging_disinfect_start"
            android:textSize="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wateraging_factory" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>