<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filtererror_filter_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wlan_connect_title"
            android:textColor="@color/color_white"
            android:textSize="35dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/skip"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="20dp"
            android:textColor="@color/color_7f"
            android:gravity="center"
            android:background="@drawable/bg_wlanconnect_skip"
            android:padding="10dp"
            android:layout_marginRight="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/filtererror_filter_type"
            app:layout_constraintBottom_toBottomOf="@id/filtererror_filter_type"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wifi_scan_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/filtererror_filter_type"
            app:layout_constraintBottom_toTopOf="@id/finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/finish"
            android:layout_width="256dp"
            android:layout_height="78dp"
            android:text="@string/finish"
            android:textColor="@color/color_white"
            android:textSize="28dp"
            android:background="@drawable/bg_wifi_finish_disable"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
