<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <com.viomi.ovensocommon.view.TitleBar
            android:id="@+id/lockswitch_switch_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_black_0f"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:set_title_text="@string/setting_lock" />

        <!--android:fontFamily="@font/bebas_neue_bold"-->
        <TextView
            android:id="@+id/lockswitch_switch_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/setting_child_lock"
            android:textColor="@color/color_white"
            android:textSize="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lockswitch_switch_bar" />

        <com.viomi.ovensocommon.view.SwitchButton
            android:id="@+id/lockswitch_switch"
            android:layout_width="139dp"
            android:layout_height="72dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="@id/lockswitch_switch_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lockswitch_switch_title"
            app:tintColor="@color/color_green_light" />


        <ImageView
            android:id="@+id/lockswitch_tip_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_lockswitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lockswitch_tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/setting_lock_on"
            android:textColor="@color/color_99"
            android:textSize="34dp"
            app:layout_constraintEnd_toEndOf="@id/lockswitch_tip_img"
            app:layout_constraintStart_toStartOf="@id/lockswitch_tip_img"
            app:layout_constraintTop_toBottomOf="@+id/lockswitch_tip_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>